pantalla de detalle

--- a/VallaHackathon/app/src/main/res/values/styles.xml
+++ b/VallaHackathon/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="BlueBtn" parent="@android:style/TextAppearance.Medium">
+        <item name="android:background">@color/blue</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
