mejorando layout de detalle

--- a/VallaHackathon/app/src/main/res/values/colors.xml
+++ b/VallaHackathon/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black_80">#00000080</color>
-    <color name="blue">#0000dd</color>
+    <color name="blue">#0075ad</color>
 </resources>
