--- a/VallaHackathon/app/src/main/res/layout/activity_detail.xml
+++ b/VallaHackathon/app/src/main/res/layout/activity_detail.xml
@@ -3,9 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".DetailActivity">
 
 
@@ -17,15 +18,14 @@
         <TextView
             android:id="@+id/activity_detailTextMain"
             android:layout_width="fill_parent"
-            android:layout_height="90dp"
-            android:layout_below="@id/activity_detailImage"
+            android:layout_height="wrap_content"
             android:background="@android:color/black"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:padding="20dp"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/activity_detailTextMain"
             android:id="@+id/activity_detailLinearBigInfo">
 
             <TextView
@@ -40,7 +40,9 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:id="@+id/activity_detailTextFocalLenght"
-                style="@style/BlueBtn"/>
+                style="@style/BlueBtn"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -55,18 +57,16 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:id="@+id/activity_detailTextCamera"
-            android:layout_below="@id/activity_detailLinearBigInfo"/>
+            android:id="@+id/activity_detailTextCamera"/>
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:id="@+id/activity_detailTextPhotoLens"
-            android:layout_below="@id/activity_detailLinearBigInfo"/>
+            android:id="@+id/activity_detailTextPhotoLens"/>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <include
         layout="@layout/spinner"
