--- a/VallaHackathon/app/src/main/res/values/styles.xml
+++ b/VallaHackathon/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+
     </style>
 
 </resources>
