--- a/VallaHackathon/app/src/main/res/values/styles.xml
+++ b/VallaHackathon/app/src/main/res/values/styles.xml
@@ -3,12 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:textSize">@dimen/text_size</item>
     </style>
 
     <style name="BlueBtn" parent="@android:style/TextAppearance.Medium">
         <item name="android:background">@color/blue</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
 
